--- a/mentorship.html
+++ b/mentorship.html
@@ -128,14 +128,14 @@
       </div>
 
       <div class="mentor-card">
-        <h3>Mr. Shuvodeep Guria</h3>
+        <h3>Mr. Suvodeep Guria</h3>
         <p>Design Coach | UI/UX Specialist</p>
         <p class="charge">₹299 / 30 mins</p>
         <a href="#">Book a Call</a>
       </div>
 
       <div class="mentor-card">
-        <h3>Mr. Sourodip Sarkar</h3>
+        <h3>Mr. Sauradip Sarkar</h3>
         <p>Entrepreneurship Advisor | Business Coach</p>
         <p class="charge">₹499 / 45 mins</p>
         <a href="#">Book a Call</a>
