--- a/carrerbot.html
+++ b/carrerbot.html
@@ -1,107 +1,135 @@
-<!-- explore.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Career Bot</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles.css" />
   <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #eef2f7;
+    }
+
+    header {
+      background: linear-gradient(to right, #003366, #0055aa);
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
+    }
+
     .explore-container {
       padding: 40px 20px;
       background-color: #f4f4f9;
-    }
-
-    .explore-header {
       text-align: center;
-      margin-bottom: 30px;
     }
 
-    .filters {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-bottom: 30px;
-    }
-
-    .filters label {
-      font-weight: bold;
-    }
-
-    .filters select {
-      padding: 10px;
-      border-radius: 5px;
-      border: 1px solid #ccc;
-      font-size: 1em;
-    }
-
-    .career-list {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 20px;
-      justify-content: center;
-    }
-
-    .career-card {
-      background-color: #fff;
-      width: 300px;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      transition: transform 0.3s ease;
-    }
-
-    .career-card:hover {
-      transform: translateY(-10px);
-    }
-
-    .career-card h3 {
-      margin-top: 0;
+    .explore-header h2 {
+      font-size: 2rem;
+      margin-bottom: 10px;
       color: #003366;
+      animation: fadeIn 1.2s ease-in-out;
     }
 
-    .career-card p {
-      color: #555;
+    .explore-header p {
+      font-size: 1.1rem;
+      color: #666;
+      animation: fadeIn 1.5s ease-in-out;
     }
 
-    .career-card ul {
-      padding-left: 20px;
-      color: #333;
+    /* Chatbot Box Styling */
+    .chatbot-container {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 600px;
+      margin: 40px auto;
+      max-width: 600px;
+      padding: 20px;
+      border-radius: 20px;
+      background: white;
+      box-shadow: 0 10px 25px rgba(0, 0, 0, 0.2);
+      animation: popIn 1s ease-out;
     }
+
+    .chatbot-container iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+      border-radius: 12px;
+    }
+
+    /* Button Styling (Optional for back) */
     .back-button {
       display: block;
-      margin: 40px auto 20px;
+      margin: 20px auto;
       padding: 12px 24px;
       background-color: #003366;
       color: white;
       text-decoration: none;
       border-radius: 8px;
       text-align: center;
-      width: fit-content;
+      transition: background 0.3s ease;
     }
 
     .back-button:hover {
       background-color: #0055aa;
     }
+
+    /* Animations */
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-20px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    @keyframes popIn {
+      0% {
+        transform: scale(0.8);
+        opacity: 0;
+      }
+      100% {
+        transform: scale(1);
+        opacity: 1;
+      }
+    }
+
+    /* Responsive */
+    @media (max-width: 768px) {
+      .chatbot-container {
+        width: 90%;
+        height: 500px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .chatbot-container {
+        height: 450px;
+      }
+    }
   </style>
 </head>
 <body>
+  <br><br><br><br>
   <header>
-    <h1>Explore Career Options</h1>
+    <h1>Explore Career Options with Our Chat Bot</h1>
   </header>
 
   <section class="explore-container">
     <div class="explore-header">
-      <h2>Find Careers Based on Your Interests</h2>
-      <p>Use filters to explore careers by industry, education level, and salary range.</p>
+      <h2>Find Career Options with Our Chat Bot</h2>
     </div>
 
-   
-    <a class="back-button" href="index.html">⬅ Back to Main Page</a>
+    <!-- Chatbot Box in Center -->
+    <div class="chatbot-container">
+      <iframe
+        src="https://cdn.botpress.cloud/webchat/v2.3/shareable.html?configUrl=https://files.bpcontent.cloud/2025/04/19/05/20250419054901-AGZI45BP.json"
+        allow="microphone; camera"
+      ></iframe>
+    </div>
 
+    <a class="back-button" href="index.html">⬅ Back to Main Page</a>
   </section>
 </body>
-<script src="https://cdn.botpress.cloud/webchat/v2.3/inject.js"></script>
-<script src="https://files.bpcontent.cloud/2025/04/19/00/20250419001044-INXO4Z7O.js"></script>
 </html>
